Cambio de texto

--- a/millonario.html
+++ b/millonario.html
@@ -41,15 +41,12 @@
         <div class="container bg-success">
             <h2>¿Por qué se creó esta página?</h2>
             <p>
-                Esta página está creada con el fin de ser entregada para un proyecto, se ha elegido el comodín 50% para crear un simulador.
+                Esta página está creada con el fin de ser entregada para un proyecto, se ha elegido el comodín cambio de pregunta para crear un simulador.
             </p>
         </div>
         </div>
             <div class="container bg-danger">
-                <h1>Comodín 50%</h1>
-                <p>
-                    Cincuenta por ciento (50:50): Se eliminan dos de las opciones incorrectas, dejando al concursante con una elección entre la respuesta correcta y una incorrecta.
-                </p>
+                <h1>Comodín cambio de pregunta</h1>
             </div>
         </div>
     </main>
@@ -58,7 +55,7 @@
         <h1>Juego de Preguntas</h1>
         <div id="question"></div>
         <div id="options"></div>
-        <button id="nextButton" onclick="nextQuestion()">Siguiente Pregunta</button>
+        <button id="nextButton" onclick="nextQuestion()">Cambio de Pregunta</button>
       </div>
     </div>
       <script src="millonario.js"></script>
