--- a/millonario.html
+++ b/millonario.html
@@ -63,7 +63,7 @@
         <div class="container">
             <h2>Diseñadora:</h2>
             <ul>
-                <li>Diana Aily Fabela Peralta</li>
+                <li>Diana Ailyn Fabela Peralta</li>
             </ul>
             <p>Página creada por Diana Ailyn Fabela Peralta</p>
         </div>
